--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ADDR=:3001
-PUBLISHER_JWT_KEY=!UnsecureChangeMePublisher!
-SUBSCRIBER_JWT_KEY=!UnsecureChangeMeSubscriber!
+PUBLISHER_JWT_KEY=!UnsecureChangeMe!
+SUBSCRIBER_JWT_KEY=!UnsecureChangeMe!
 ALLOW_ANONYMOUS=1
 DEBUG=1
 CORS_ALLOWED_ORIGINS=
